# gitcube

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
database/: gitcube.sql
migrations/2018-11-01-120448_create_users/: up.sql
public/: index.tpl  overview.tpl  profile.tpl  repositories.tpl  signin.tpl  signup.tpl  stars.tpl
public/layouts/: main_layout.tpl
public/templates/: index.html  new_repository.html  overview.html  profile.html  repositories.html  repository.html  signin.html  signup.html  stars.html
public/templates/layouts/: main_layout.html
src/: cmd.rs  controllers.rs  error.rs  main.rs  models.rs  schema.rs  template.rs
src/controllers/: git.rs  home.rs  mod.rs  org.rs  repo.rs  status.rs  user.rs
src/git/: branch.rs  commit.rs  http.rs  mod.rs  repo.rs  tree.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  org.rs  repo.rs  user.rs
templates/: 404.html  followers.html  following.html  help.html  index.html  new_organization.html  overview.html  profile.html  repositories.html  repository.html  signup.html
templates/admin/: panel.html
templates/layouts/: main_layout.html
templates/org/: profile.html  repositories.html
templates/user/: followers.html  following.html  overview.html  profile.html  repositories.html  stars.html
