[package]
name = "gitcube"
version = "0.1.0"
authors = ["JunWang <1103870790@qq.com>"]
edition = "2015"

[dependencies]
bytes = "0.4.10"
chrono = "0.4.6"
uuid = "0.7"
regex = "1"
log = "0.4"
fern = "0.5.6"
argparse = "0.2.2"
futures = "0.1"
actix-web = "0.7"
tera = "0.11"
mysql = "*"
dotenv = "0.9.0"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
lazy_static = "1.1.0"